--- a/chat.html
+++ b/chat.html
@@ -21,17 +21,17 @@
 html, body { height:100%; font-family:Arial,sans-serif; background: var(--color-bg-light); }
 
 /* HEADER */
-header { background:#fff; padding:10px; border-bottom:1px solid #ddd; z-index:100; display:flex; align-items:center; gap:8px; }
+header { background:#fff; padding:10px; border-bottom:1px solid #ddd; z-index:100; display:flex; align-items:center; gap:8px; position:fixed; top:0; left:0; right:0; }
 header h1 { display:flex; align-items:center; gap:8px; color: var(--color-primary); font-size:1.4em; }
 .emoji-head { width:32px; height:32px; }
 
 /* TOPBAR */
-#topBar { display:flex; align-items:center; gap:8px; padding:6px 10px; background:#fafafa; border-bottom:1px solid #ddd; flex-wrap:wrap; overflow-x:auto; z-index:100; }
+#topBar { display:flex; align-items:center; gap:8px; padding:6px 10px; background:#fafafa; border-bottom:1px solid #ddd; flex-wrap:wrap; overflow-x:auto; z-index:100; margin-top:50px;}
 #topBar button { background:white; color:var(--color-primary); border:1px solid var(--color-primary); padding:6px 10px; border-radius:5px; cursor:pointer; flex-shrink:0; }
 #topBar span { font-size:0.9em; flex-shrink:0; }
 
 /* MOBILE USERS HORIZONTAL */
-#mobileUserLine { display:none; overflow-x:hidden; white-space:nowrap; background:#fafafa; padding:6px 4px; border-bottom:1px solid #ddd; }
+#mobileUserLine { display:flex; overflow-x:auto; white-space:nowrap; background:#fafafa; padding:6px 4px; border-bottom:1px solid #ddd; margin-top:0px; }
 .userItemMobile { width:50px; height:50px; border-radius:50%; overflow:hidden; display:inline-block; margin-right:6px; border:2px solid transparent; cursor:pointer; transition: transform 0.2s; position:relative; }
 .userItemMobile img { width:100%; height:100%; border-radius:50%; object-fit:cover; }
 .userItemMobile:hover { border-color:var(--color-primary); transform:scale(1.1); }
@@ -48,14 +48,10 @@ header h1 { display:flex; align-items:center; gap:8px; color: var(--color-primar
   animation: blink 1s infinite;
   display:none;
 }
-@keyframes blink {
-  0% { opacity:1; }
-  50% { opacity:0; }
-  100% { opacity:1; }
-}
+@keyframes blink { 0% { opacity:1; } 50% { opacity:0; } 100% { opacity:1; } }
 
 /* MAIN */
-#mainContent { display:flex; flex:1; overflow:hidden; height: calc(100vh - 108px); }
+#mainContent { display:flex; flex:1; overflow:hidden; height: calc(100vh - 150px); margin-top:10px; }
 
 /* USER LIST (DESKTOP) */
 #userList { width:200px; background:#fff; border-right:1px solid #ddd; overflow-y:auto; padding:8px; }
@@ -64,7 +60,7 @@ header h1 { display:flex; align-items:center; gap:8px; color: var(--color-primar
 .userItem img { width:28px; height:28px; border-radius:50%; }
 
 /* CHAT */
-#chatContainer { flex:1; display:flex; flex-direction:column; overflow:hidden; }
+#chatContainer { flex:1; display:flex; flex-direction:column; overflow:hidden; margin-left:0px; }
 #chatWindow { flex:1; overflow-y:auto; padding:10px; background:white; }
 .msg { margin:5px 0; padding:8px; border-radius:8px; max-width:80%; word-wrap:break-word; }
 .userMsg { background:#e0f7e9; align-self:flex-end; text-align:right; }
@@ -80,64 +76,18 @@ header h1 { display:flex; align-items:center; gap:8px; color: var(--color-primar
 #adSidebar { width:280px; background:#f1f1f1; border-left:1px dashed #ccc; padding:8px; text-align:center; overflow-y:auto; }
 
 /* FOOTER */
-footer { background:white; color:#555; text-align:center; padding:6px; font-size:0.85em; border-top:1px solid #ddd; }
+footer { background:white; color:#555; text-align:center; padding:6px; font-size:0.85em; border-top:1px solid #ddd; position:fixed; bottom:0; left:0; right:0; z-index:100; }
 
 /* MOBILE */
 @media(max-width:768px){
-  html, body { height:100%; overflow:visible; }
-
-  header { position:fixed; top:0; left:0; right:0; z-index:100; height:50px; }
-
-  #topBar { position:fixed; top:50px; left:0; right:0; z-index:100; width:100%; height:40px; }
-
-  #mobileUserLine {
-    display:flex;
-    position:fixed;
-    top:90px;
-    left:0;
-    right:0;
-    padding:6px 4px;
-    background:#fafafa;
-    border-bottom:1px solid #ddd;
-    z-index:100;
-    overflow-x:auto;
-    white-space:nowrap;
-  }
-
-  #mainContent {
-    flex-direction:column;
-    margin-top: 130px;
-    margin-bottom: 100px;
-    height: auto;
-    overflow-y:auto;
-  }
-
-  #chatInput {
-    position:fixed;
-    bottom:40px;
-    left:0;
-    right:0;
-    padding:4px;
-    background:white;
-    z-index:50;
-    width:100%;
-  }
-
-  footer {
-    position:fixed;
-    bottom:0;
-    left:0;
-    right:0;
-    z-index:100;
-    width:100%;
-    height:40px;
-  }
-
+  #mainContent { flex-direction:column; margin-top:130px; margin-bottom:100px; height:auto; }
+  #chatInput { position:fixed; bottom:40px; left:0; right:0; padding:4px; background:white; z-index:50; width:100%; }
   #userList, #adSidebar { display:none; }
 }
 </style>
 </head>
 <body>
+
 <header>
   <h1>Славянский клуб <img src="emoji_dimitry.png" alt="Dimitry" class="emoji-head"></h1>
 </header>
@@ -200,6 +150,7 @@ let unreadMap={};
 loginBtn.onclick=()=>auth.signInWithPopup(new firebase.auth.GoogleAuthProvider());
 logoutBtn.onclick=()=>auth.signOut();
 
+// LOGIN/LOGOUT
 auth.onAuthStateChanged(user=>{
   if(user){
     loginBtn.style.display="none";
@@ -209,6 +160,7 @@ auth.onAuthStateChanged(user=>{
     sendBtn.disabled=false;
     db.ref("online/"+user.uid).set({name:user.displayName,photo:user.photoURL});
     db.ref("online/"+user.uid).onDisconnect().remove();
+    listenRequests(user.uid);
   } else {
     loginBtn.style.display="inline-block";
     logoutBtn.style.display="none";
@@ -218,6 +170,7 @@ auth.onAuthStateChanged(user=>{
   }
 });
 
+// LISTA DE USUÁRIOS
 db.ref("online").on("value",snap=>{
   const users=snap.val()||{};
   onlineCount.textContent=`👥 ${Object.keys(users).length}`;
@@ -226,22 +179,103 @@ db.ref("online").on("value",snap=>{
   for(const [uid,u] of Object.entries(users)){
     const div=document.createElement("div");
     div.className="userItem";
-    div.innerHTML=`<img src="${u.photo}"><span>${u.name}</span><div class='notify-dot'></div>`;
-    div.onclick=()=>openPrivateChat(uid,u.name);
+    div.innerHTML=`<img src="${u.photo||'https://cdn-icons-png.flaticon.com/512/847/847969.png'}"><span>${u.name}</span><div class='notify-dot'></div>`;
+    div.onclick=()=>sendChatRequest(uid,u.name);
     userList.appendChild(div);
 
     const mob=document.createElement("div");
     mob.className="userItemMobile";
-    mob.innerHTML=`<img src="${u.photo}" title="${u.name}"><div class='notify-dot'></div>`;
-    mob.onclick=()=>openPrivateChat(uid,u.name);
+    mob.innerHTML=`<img src="${u.photo||'https://cdn-icons-png.flaticon.com/512/847/847969.png'}" title="${u.name}"><div class='notify-dot'></div>`;
+    mob.onclick=()=>sendChatRequest(uid,u.name);
     mobileUserLine.appendChild(mob);
   }
   startMobileScroll();
 });
 
+// ENVIAR SOLICITAÇÃO DE CHAT
+function sendChatRequest(uid,name){
+  if(!auth.currentUser) return alert("Faça login para enviar mensagens.");
+  if(uid===auth.currentUser.uid) return;
+
+  const chatId=[auth.currentUser.uid,uid].sort().join("_");
+  db.ref("chatRequests/"+uid+"/"+chatId).set({
+    from: auth.currentUser.uid,
+    fromName: auth.currentUser.displayName,
+    timestamp: Date.now()
+  });
+  alert(`Pedido de chat enviado para ${name}`);
+}
+
+// ESCUTAR SOLICITAÇÕES
+function listenRequests(uid){
+  db.ref("chatRequests/"+uid).on("value",snap=>{
+    const reqs=snap.val()||{};
+    for(const chatId in reqs){
+      const data=reqs[chatId];
+      // mostra bolinha vermelha
+      showNotifyDot(data.from,true);
+      alert(`Nova solicitação de conversa de ${data.fromName}!`);
+    }
+  });
+}
+
+// ABRIR CHAT PRIVADO
+function openPrivateChat(uid,name){
+  if(!auth.currentUser) return alert("Faça login para conversar.");
+  if(uid===auth.currentUser.uid) return;
+
+  const chatId=[auth.currentUser.uid,uid].sort().join("_");
+  currentChat=chatId;
+  chatWindow.innerHTML=`<div style='text-align:center;margin:10px;color:#555;'>💬 Conversa privada com ${name}</div>`;
+  generalBtn.style.display="inline-block";
+
+  // Remove notificação
+  showNotifyDot(uid,false);
+
+  // Verifica se há solicitação pendente
+  db.ref("chatRequests/"+auth.currentUser.uid+"/"+chatId).once("value").then(s=>{
+    if(s.exists()){
+      // Mostra decisão aceitar/recusar
+      chatWindow.innerHTML=`
+        <div style='text-align:center;margin-top:20px;'>
+          🔔 ${s.val().fromName} quer conversar com você<br><br>
+          <button onclick="acceptChat('${chatId}')">✅ Aceitar</button>
+          <button onclick="rejectChat('${chatId}')">❌ Recusar</button>
+        </div>`;
+    } else {
+      startChatListener(chatId);
+    }
+  });
+}
+
+// ACEITAR / RECUSAR CHAT
+function acceptChat(chatId){
+  db.ref("privateStatus/"+chatId).set({accepted:true});
+  db.ref("chatRequests/"+auth.currentUser.uid+"/"+chatId).remove();
+  startChatListener(chatId);
+}
+
+function rejectChat(chatId){
+  db.ref("privateStatus/"+chatId).set({rejected:true});
+  db.ref("chatRequests/"+auth.currentUser.uid+"/"+chatId).remove();
+  chatWindow.innerHTML="<div style='text-align:center;color:red;'>❌ Você recusou esta conversa.</div>";
+}
+
+// ESCUTAR MENSAGENS PRIVADAS
+function startChatListener(chatId){
+  db.ref("private/"+chatId).off();
+  db.ref("private/"+chatId).on("child_added",s=>{
+    showMessage(s.val(),chatId);
+    if(s.val().user!==auth.currentUser.displayName && currentChat!==chatId){
+      playNotification();
+      unreadMap[chatId]=true;
+    }
+  });
+}
+
+// ENVIAR MENSAGEM
 sendBtn.onclick=sendMessage;
 msgInput.addEventListener("keypress",e=>{if(e.key==="Enter")sendMessage();});
-
 function sendMessage(){
   const text=msgInput.value.trim();
   const user=auth.currentUser;
@@ -251,75 +285,9 @@ function sendMessage(){
   msgInput.value="";
 }
 
-// CHAT GERAL
-db.ref("chatGlobal").on("child_added",snap=>{
-  const msg=snap.val();
-  showMessage(msg,"chatGlobal");
-  if(msg.user!==auth.currentUser?.displayName && currentChat!=="global") playNotification();
-});
-
-// ABRIR CHAT PRIVADO
-function openPrivateChat(uid,name){
-  if(!auth.currentUser)return alert("Faça login para conversar.");
-  if(uid===auth.currentUser.uid)return;
-
-  const chatId=[uid,auth.currentUser.uid].sort().join("_");
-  currentChat=chatId;
-  chatWindow.innerHTML=`<div style='text-align:center;margin:10px;color:#555;'>💬 Conversa privada com ${name}</div>`;
-  generalBtn.style.display="inline-block";
-
-  if(unreadMap[chatId]){
-    unreadMap[chatId]=false;
-    updateNotifyDot(uid,false);
-  }
-
-  db.ref("privateStatus/"+chatId).once("value").then(s=>{
-    const st=s.val();
-    // Agora recusas não são permanentes
-    if(!st || !st.accepted){
-      showAcceptancePrompt(chatId,name);
-    } else {
-      startChatListener(chatId);
-    }
-  });
-}
-
-// MOSTRA "ACEITAR?" AO RECEBER MENSAGEM
-function showAcceptancePrompt(chatId,name){
-  chatWindow.innerHTML=`
-    <div style='text-align:center;margin-top:20px;'>
-      ${name} enviou uma mensagem. Deseja aceitar o chat?<br><br>
-      <button onclick="acceptChat('${chatId}')">✅ Aceitar</button>
-      <button onclick="rejectChat('${chatId}')">❌ Recusar</button>
-    </div>`;
-}
-
-// ACEITAR / RECUSAR CHAT
-function acceptChat(chatId){
-  db.ref("privateStatus/"+chatId).set({accepted:true});
-  startChatListener(chatId);
-}
-function rejectChat(chatId){
-  db.ref("privateStatus/"+chatId).remove(); // Permite novas futuras solicitações
-  chatWindow.innerHTML="<div style='text-align:center;color:red;'>❌ Você recusou esta conversa.</div>";
-}
-
-// MONITORA CHAT PRIVADO
-function startChatListener(chatId){
-  db.ref("private/"+chatId).off();
-  db.ref("private/"+chatId).on("child_added",s=>{
-    showMessage(s.val(),chatId);
-    if(s.val().user!==auth.currentUser.displayName && currentChat!==chatId){
-      playNotification();
-      unreadMap[chatId]=true;
-      const uidOther=chatId.replace(auth.currentUser.uid,"").replace("_","");
-      updateNotifyDot(uidOther,true);
-    }
-  });
-}
-
+// MOSTRAR MENSAGEM
 function showMessage(msg,room){
-  if(room!=="chatGlobal" && room!==currentChat)return;
+  if(room!=="chatGlobal" && room!==currentChat) return;
   const div=document.createElement("div");
   div.className=msg.user===auth.currentUser?.displayName?"msg userMsg":"msg otherMsg";
   div.textContent=`${msg.user}: ${msg.text}`;
@@ -328,13 +296,10 @@ function showMessage(msg,room){
 }
 
 // NOTIFICAÇÃO
-function playNotification(){
-  msgSound.currentTime=0;
-  msgSound.play();
-}
+function playNotification(){ msgSound.currentTime=0; msgSound.play(); }
 
-// Atualiza bolinha vermelha
-function updateNotifyDot(uid,show){
+// MOSTRAR / ESCONDER BOLINHA
+function showNotifyDot(uid,show){
   const items=[...document.querySelectorAll(".userItem"),...document.querySelectorAll(".userItemMobile")];
   for(const el of items){
     const dot=el.querySelector(".notify-dot");
@@ -350,17 +315,18 @@ generalBtn.onclick=()=>{
   generalBtn.style.display="none";
 };
 
-// SCROLL AUTOMÁTICO MOBILE
+// SCROLL INFINITO MOBILE
 let scrollInterval;
 function startMobileScroll(){
   clearInterval(scrollInterval);
   const container=mobileUserLine;
-  if(!container)return;
+  if(!container) return;
   scrollInterval=setInterval(()=>{
     container.scrollLeft+=1;
     if(container.scrollLeft>=container.scrollWidth-container.clientWidth) container.scrollLeft=0;
   },20);
 }
 </script>
+
 </body>
 </html>
