--- a/chat.html
+++ b/chat.html
@@ -21,17 +21,17 @@
 html, body { height:100%; font-family:Arial,sans-serif; background: var(--color-bg-light); }
 
 /* HEADER */
-header { background:#fff; padding:10px; border-bottom:1px solid #ddd; z-index:100; display:flex; align-items:center; gap:8px; position:fixed; top:0; left:0; right:0; }
+header { background:#fff; padding:10px; border-bottom:1px solid #ddd; z-index:100; display:flex; align-items:center; gap:8px; }
 header h1 { display:flex; align-items:center; gap:8px; color: var(--color-primary); font-size:1.4em; }
 .emoji-head { width:32px; height:32px; }
 
 /* TOPBAR */
-#topBar { display:flex; align-items:center; gap:8px; padding:6px 10px; background:#fafafa; border-bottom:1px solid #ddd; flex-wrap:wrap; overflow-x:auto; z-index:100; margin-top:50px;}
+#topBar { display:flex; align-items:center; gap:8px; padding:6px 10px; background:#fafafa; border-bottom:1px solid #ddd; flex-wrap:wrap; overflow-x:auto; z-index:100; }
 #topBar button { background:white; color:var(--color-primary); border:1px solid var(--color-primary); padding:6px 10px; border-radius:5px; cursor:pointer; flex-shrink:0; }
 #topBar span { font-size:0.9em; flex-shrink:0; }
 
 /* MOBILE USERS HORIZONTAL */
-#mobileUserLine { display:flex; overflow-x:auto; white-space:nowrap; background:#fafafa; padding:6px 4px; border-bottom:1px solid #ddd; margin-top:0px; }
+#mobileUserLine { display:none; overflow-x:hidden; white-space:nowrap; background:#fafafa; padding:6px 4px; border-bottom:1px solid #ddd; }
 .userItemMobile { width:50px; height:50px; border-radius:50%; overflow:hidden; display:inline-block; margin-right:6px; border:2px solid transparent; cursor:pointer; transition: transform 0.2s; position:relative; }
 .userItemMobile img { width:100%; height:100%; border-radius:50%; object-fit:cover; }
 .userItemMobile:hover { border-color:var(--color-primary); transform:scale(1.1); }
@@ -48,10 +48,14 @@ header h1 { display:flex; align-items:center; gap:8px; color: var(--color-primar
   animation: blink 1s infinite;
   display:none;
 }
-@keyframes blink { 0% { opacity:1; } 50% { opacity:0; } 100% { opacity:1; } }
+@keyframes blink {
+  0% { opacity:1; }
+  50% { opacity:0; }
+  100% { opacity:1; }
+}
 
 /* MAIN */
-#mainContent { display:flex; flex:1; overflow:hidden; height: calc(100vh - 150px); margin-top:10px; }
+#mainContent { display:flex; flex:1; overflow:hidden; height: calc(100vh - 108px); }
 
 /* USER LIST (DESKTOP) */
 #userList { width:200px; background:#fff; border-right:1px solid #ddd; overflow-y:auto; padding:8px; }
@@ -60,7 +64,7 @@ header h1 { display:flex; align-items:center; gap:8px; color: var(--color-primar
 .userItem img { width:28px; height:28px; border-radius:50%; }
 
 /* CHAT */
-#chatContainer { flex:1; display:flex; flex-direction:column; overflow:hidden; margin-left:0px; }
+#chatContainer { flex:1; display:flex; flex-direction:column; overflow:hidden; }
 #chatWindow { flex:1; overflow-y:auto; padding:10px; background:white; }
 .msg { margin:5px 0; padding:8px; border-radius:8px; max-width:80%; word-wrap:break-word; }
 .userMsg { background:#e0f7e9; align-self:flex-end; text-align:right; }
@@ -76,18 +80,28 @@ header h1 { display:flex; align-items:center; gap:8px; color: var(--color-primar
 #adSidebar { width:280px; background:#f1f1f1; border-left:1px dashed #ccc; padding:8px; text-align:center; overflow-y:auto; }
 
 /* FOOTER */
-footer { background:white; color:#555; text-align:center; padding:6px; font-size:0.85em; border-top:1px solid #ddd; position:fixed; bottom:0; left:0; right:0; z-index:100; }
+footer { background:white; color:#555; text-align:center; padding:6px; font-size:0.85em; border-top:1px solid #ddd; }
 
 /* MOBILE */
 @media(max-width:768px){
-  #mainContent { flex-direction:column; margin-top:130px; margin-bottom:100px; height:auto; }
+  html, body { height:100%; overflow:visible; }
+  header { position:fixed; top:0; left:0; right:0; z-index:100; height:50px; }
+  #topBar { position:fixed; top:50px; left:0; right:0; z-index:100; width:100%; height:40px; }
+  #mobileUserLine {
+    display:flex; position:fixed; top:90px; left:0; right:0;
+    padding:6px 4px; background:#fafafa; border-bottom:1px solid #ddd;
+    z-index:100; overflow-x:auto; white-space:nowrap;
+  }
+  #mainContent {
+    flex-direction:column; margin-top:130px; margin-bottom:100px; height:auto; overflow-y:auto;
+  }
   #chatInput { position:fixed; bottom:40px; left:0; right:0; padding:4px; background:white; z-index:50; width:100%; }
+  footer { position:fixed; bottom:0; left:0; right:0; z-index:100; width:100%; height:40px; }
   #userList, #adSidebar { display:none; }
 }
 </style>
 </head>
 <body>
-
 <header>
   <h1>Славянский клуб <img src="emoji_dimitry.png" alt="Dimitry" class="emoji-head"></h1>
 </header>
@@ -144,13 +158,15 @@ const onlineCount=document.getElementById("onlineCount");
 const generalBtn=document.getElementById("generalBtn");
 const mobileUserLine=document.getElementById("mobileUserLine");
 const msgSound=document.getElementById("msgSound");
+
 let currentChat="global";
 let unreadMap={};
+let notifiedRequests={};
 
 loginBtn.onclick=()=>auth.signInWithPopup(new firebase.auth.GoogleAuthProvider());
 logoutBtn.onclick=()=>auth.signOut();
 
-// LOGIN/LOGOUT
+// LOGIN
 auth.onAuthStateChanged(user=>{
   if(user){
     loginBtn.style.display="none";
@@ -160,7 +176,7 @@ auth.onAuthStateChanged(user=>{
     sendBtn.disabled=false;
     db.ref("online/"+user.uid).set({name:user.displayName,photo:user.photoURL});
     db.ref("online/"+user.uid).onDisconnect().remove();
-    listenRequests(user.uid);
+    listenRequests(user.uid); // escuta solicitações
   } else {
     loginBtn.style.display="inline-block";
     logoutBtn.style.display="none";
@@ -179,42 +195,39 @@ db.ref("online").on("value",snap=>{
   for(const [uid,u] of Object.entries(users)){
     const div=document.createElement("div");
     div.className="userItem";
-    div.innerHTML=`<img src="${u.photo||'https://cdn-icons-png.flaticon.com/512/847/847969.png'}"><span>${u.name}</span><div class='notify-dot'></div>`;
+    div.innerHTML=`<img src="${u.photo}"><span>${u.name}</span><div class='notify-dot'></div>`;
     div.onclick=()=>sendChatRequest(uid,u.name);
     userList.appendChild(div);
 
     const mob=document.createElement("div");
     mob.className="userItemMobile";
-    mob.innerHTML=`<img src="${u.photo||'https://cdn-icons-png.flaticon.com/512/847/847969.png'}" title="${u.name}"><div class='notify-dot'></div>`;
+    mob.innerHTML=`<img src="${u.photo}" title="${u.name}"><div class='notify-dot'></div>`;
     mob.onclick=()=>sendChatRequest(uid,u.name);
     mobileUserLine.appendChild(mob);
   }
   startMobileScroll();
 });
 
-// ENVIAR SOLICITAÇÃO DE CHAT
+// ENVIA SOLICITAÇÃO DE CHAT
 function sendChatRequest(uid,name){
-  if(!auth.currentUser) return alert("Faça login para enviar mensagens.");
-  if(uid===auth.currentUser.uid) return;
-
-  const chatId=[auth.currentUser.uid,uid].sort().join("_");
-  db.ref("chatRequests/"+uid+"/"+chatId).set({
-    from: auth.currentUser.uid,
-    fromName: auth.currentUser.displayName,
-    timestamp: Date.now()
-  });
-  alert(`Pedido de chat enviado para ${name}`);
+  const user=auth.currentUser;
+  if(!user) return alert("Faça login para conversar.");
+  if(uid===user.uid) return;
+  const chatId=[user.uid,uid].sort().join("_");
+  db.ref("chatRequests/"+uid+"/"+chatId).set({from:user.uid,fromName:user.displayName,waiting:true});
 }
 
-// ESCUTAR SOLICITAÇÕES
+// ESCUTA SOLICITAÇÕES (apenas alerta 1x)
 function listenRequests(uid){
   db.ref("chatRequests/"+uid).on("value",snap=>{
     const reqs=snap.val()||{};
     for(const chatId in reqs){
-      const data=reqs[chatId];
-      // mostra bolinha vermelha
-      showNotifyDot(data.from,true);
-      alert(`Nova solicitação de conversa de ${data.fromName}!`);
+      if(!notifiedRequests[chatId]){
+        const data=reqs[chatId];
+        showNotifyDot(data.from,true);
+        alert(`Nova solicitação de conversa de ${data.fromName}!`);
+        notifiedRequests[chatId]=true;
+      }
     }
   });
 }
@@ -223,19 +236,15 @@ function listenRequests(uid){
 function openPrivateChat(uid,name){
   if(!auth.currentUser) return alert("Faça login para conversar.");
   if(uid===auth.currentUser.uid) return;
-
   const chatId=[auth.currentUser.uid,uid].sort().join("_");
   currentChat=chatId;
   chatWindow.innerHTML=`<div style='text-align:center;margin:10px;color:#555;'>💬 Conversa privada com ${name}</div>`;
   generalBtn.style.display="inline-block";
-
-  // Remove notificação
   showNotifyDot(uid,false);
 
-  // Verifica se há solicitação pendente
   db.ref("chatRequests/"+auth.currentUser.uid+"/"+chatId).once("value").then(s=>{
     if(s.exists()){
-      // Mostra decisão aceitar/recusar
+      // exibe opção aceitar/recusar
       chatWindow.innerHTML=`
         <div style='text-align:center;margin-top:20px;'>
           🔔 ${s.val().fromName} quer conversar com você<br><br>
@@ -248,20 +257,17 @@ function openPrivateChat(uid,name){
   });
 }
 
-// ACEITAR / RECUSAR CHAT
+// ACEITAR / RECUSAR
 function acceptChat(chatId){
-  db.ref("privateStatus/"+chatId).set({accepted:true});
   db.ref("chatRequests/"+auth.currentUser.uid+"/"+chatId).remove();
   startChatListener(chatId);
 }
-
 function rejectChat(chatId){
-  db.ref("privateStatus/"+chatId).set({rejected:true});
   db.ref("chatRequests/"+auth.currentUser.uid+"/"+chatId).remove();
   chatWindow.innerHTML="<div style='text-align:center;color:red;'>❌ Você recusou esta conversa.</div>";
 }
 
-// ESCUTAR MENSAGENS PRIVADAS
+// MONITORA CHAT PRIVADO
 function startChatListener(chatId){
   db.ref("private/"+chatId).off();
   db.ref("private/"+chatId).on("child_added",s=>{
@@ -269,6 +275,8 @@ function startChatListener(chatId){
     if(s.val().user!==auth.currentUser.displayName && currentChat!==chatId){
       playNotification();
       unreadMap[chatId]=true;
+      const uidOther=chatId.replace(auth.currentUser.uid,"").replace("_","");
+      showNotifyDot(uidOther,true);
     }
   });
 }
@@ -279,13 +287,20 @@ msgInput.addEventListener("keypress",e=>{if(e.key==="Enter")sendMessage();});
 function sendMessage(){
   const text=msgInput.value.trim();
   const user=auth.currentUser;
-  if(!text||!user)return;
+  if(!text||!user) return;
   const path=currentChat==="global"?"chatGlobal":"private/"+currentChat;
   db.ref(path).push({user:user.displayName,photo:user.photoURL,text,timestamp:Date.now()});
   msgInput.value="";
 }
 
-// MOSTRAR MENSAGEM
+// CHAT GLOBAL
+db.ref("chatGlobal").on("child_added",snap=>{
+  const msg=snap.val();
+  showMessage(msg,"chatGlobal");
+  if(msg.user!==auth.currentUser?.displayName && currentChat!=="global") playNotification();
+});
+
+// MOSTRA MENSAGEM
 function showMessage(msg,room){
   if(room!=="chatGlobal" && room!==currentChat) return;
   const div=document.createElement("div");
@@ -295,13 +310,17 @@ function showMessage(msg,room){
   chatWindow.scrollTop=chatWindow.scrollHeight;
 }
 
-// NOTIFICAÇÃO
-function playNotification(){ msgSound.currentTime=0; msgSound.play(); }
+// ALERTA E SOM
+function playNotification(){
+  msgSound.currentTime=0;
+  msgSound.play();
+}
 
-// MOSTRAR / ESCONDER BOLINHA
+// ATUALIZA BOLINHA VERMELHA
 function showNotifyDot(uid,show){
   const items=[...document.querySelectorAll(".userItem"),...document.querySelectorAll(".userItemMobile")];
   for(const el of items){
+    if(el.innerHTML.includes(uid)) continue;
     const dot=el.querySelector(".notify-dot");
     if(dot) dot.style.display=show?"block":"none";
   }
@@ -315,7 +334,7 @@ generalBtn.onclick=()=>{
   generalBtn.style.display="none";
 };
 
-// SCROLL INFINITO MOBILE
+// SCROLL AUTOMÁTICO MOBILE
 let scrollInterval;
 function startMobileScroll(){
   clearInterval(scrollInterval);
@@ -327,6 +346,5 @@ function startMobileScroll(){
   },20);
 }
 </script>
-
 </body>
 </html>
